--- a/src/App.css
+++ b/src/App.css
@@ -485,7 +485,7 @@ li {
   }
 
   #about{
-    height: 700px;
+    height: 800px;
   }
 
   #projects{
@@ -906,7 +906,8 @@ li {
   .about-me-text{
     grid-column: 1;
     font-size: 1em;
-    padding: 10px;
+    padding: 20px;
+    text-align: center;
   }
 
   .projects-text{
@@ -983,7 +984,7 @@ li {
   }
 
   #about{
-    height: 800px;
+    height: 900px;
   }
 
   #projects{
@@ -992,7 +993,7 @@ li {
 
   #resume{
     margin: 0px;
-    height: 2000px;
+    height: 2250px;
   }
 
   #contact{
@@ -1084,9 +1085,8 @@ li {
 
   #contact h1{
     grid-column: 1;
-    font-size: 2.4em;
+    font-size: 2.3em;
     text-align: center;
-    margin-top: 20vh;
     padding-left: 10vw;
     padding-right: 10vw;
   }
@@ -1143,7 +1143,7 @@ li {
     border: none;
     color: white;
     height: 10vw;
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin-left: 40vw;
     border-radius: 8px;
     box-shadow:1px 1px #b3b3b3;
